--- a/signup.html
+++ b/signup.html
@@ -29,10 +29,10 @@
             </div>
             <div class="thumbnail__links">
               <ul class="list-inline m-b-0 text-center">
-                <li><a href=""><i class="fa fa-globe"></i></a></li>
+                <li><a href="https://nirbhaymeghpara.github.io/portfolio/"><i class="fa fa-globe"></i></a></li>
                 <li><a href=""><fa class="fa fa-behance"></fa></a></li>
-                <li><a href=""><i class="fa fa-github"></i></a></li>
-                <li><a href=""><i class="fa fa-twitter"></i></a></li>
+                <li><a href="https://github.com/NirbhayMeghpara"><i class="fa fa-github"></i></a></li>
+                <li><a href="https://www.instagram.com/nirbhay_0905/"><i class="fa fa-instagram"></i></a></li>
               </ul>
             </div>
             <div class="signup__overlay"></div>
